--- a/mysite/isadmin/templates/isadmin/index.html
+++ b/mysite/isadmin/templates/isadmin/index.html
@@ -47,25 +47,22 @@
 
 	<body class="no-skin">
 		<div id="navbar" class="navbar navbar-default ace-save-state">
-    <div class="navbar-container ace-save-state" id="navbar-container">
-        <button type="button" class="navbar-toggle menu-toggler pull-left" id="menu-toggler" data-target="#sidebar">
-            <span class="sr-only">Toggle sidebar</span>
+            <div class="navbar-container ace-save-state" id="navbar-container">
+                <button type="button" class="navbar-toggle menu-toggler pull-left" id="menu-toggler" data-target="#sidebar">
+                    <span class="sr-only">Toggle sidebar</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-            <span class="icon-bar"></span>
-
-            <span class="icon-bar"></span>
-
-            <span class="icon-bar"></span>
-        </button>
-
-        <div class="navbar-header pull-left">
-            <a href="index.html" class="navbar-brand">
-                <small>
-                    <i class="fa fa-leaf"></i>
-                    互联网内容异常行为管理系统
-                </small>
-            </a>
-        </div>
+            <div class="navbar-header pull-left">
+                <a href="index.html" class="navbar-brand">
+                    <small>
+                        <i class="fa fa-leaf"></i>
+                        互联网内容异常行为管理系统
+                    </small>
+                </a>
+            </div>
 
         <div class="navbar-buttons navbar-header pull-right" role="navigation">
             <ul class="nav ace-nav">
@@ -329,7 +326,7 @@
                         <img class="nav-user-photo" src="{% static 'isadmin/images/avatars/user.jpg' %}" alt="Jason's Photo" />
                         <span class="user-info">
 									<small>欢迎你,</small>
-									天逸
+									admin
 								</span>
 
                         <i class="ace-icon fa fa-caret-down"></i>
@@ -363,7 +360,7 @@
             </ul>
         </div>
     </div><!-- /.navbar-container -->
-</div>
+        </div>
 
 		<div class="main-container ace-save-state" id="main-container">
 			<script type="text/javascript">
@@ -464,13 +461,32 @@
                         </ul>
                     </li>
 
-                    <li class="sidebar-item">
-                        <a href="widgets.html" target="main-iframe">
-                            <i class="menu-icon fa fa-list-alt"></i>
-                            <span class="menu-text"> Widgets </span>
+                    <li class="sidebar-item has-son">
+                        <a href="#" class="dropdown-toggle">
+                            <i class="menu-icon fa fa-pencil-square-o"></i>
+                            <span class="menu-text"> 数据报表 </span>
+
+                            <b class="arrow fa fa-angle-down"></b>
                         </a>
 
                         <b class="arrow"></b>
+
+                        <ul class="submenu">
+                            <li class="sidebar-item">
+                                <a href="/isadmin/report/redirect_records" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    重定向页面记录
+                                </a>
+                                <b class="arrow"></b>
+                            </li>
+                            <li class="sidebar-item">
+                                <a href="/isadmin/report/compare_unique" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    多地快照比对结果
+                                </a>
+                                <b class="arrow"></b>
+                            </li>
+                        </ul>
                     </li>
                 </ul><!-- /.nav-list -->
 
