vps监控相关任务的编写

--- a/mysite/isadmin/templates/isadmin/index.html
+++ b/mysite/isadmin/templates/isadmin/index.html
@@ -406,7 +406,7 @@
                     <li class="sidebar-item active">
                         <a href="/isadmin/dashboard" target="main-iframe">
                             <i class="menu-icon fa fa-tachometer"></i>
-                            <span class="menu-text"> 仪表盘 </span>
+                            <span class="menu-text"> VPS监控 </span>
                         </a>
 
                         <b class="arrow"></b>
