--- a/mysite/isadmin/templates/isadmin/error/error-500.html
+++ b/mysite/isadmin/templates/isadmin/error/error-500.html
@@ -3,52 +3,49 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta charset="utf-8" />
-		<title>404 Error Page</title>
+		<title>500 Error Page - Ace Admin</title>
 
-		<meta name="description" content="404 Error Page" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-
-        {% load static %}
-		<meta name="description" content="Dynamic tables and grids using jqGrid plugin" />
+		<meta name="description" content="500 Error Page" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
 		<!-- bootstrap & fontawesome -->
-		<link rel="stylesheet" href="{% static 'isadmin/css/bootstrap.min.css' %}" />
-		<link rel="stylesheet" href="{% static 'isadmin/font-awesome/4.5.0/css/font-awesome.min.css' %}" />
+		<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="assets/font-awesome/4.5.0/css/font-awesome.min.css" />
 
 		<!-- page specific plugin styles -->
 
 		<!-- text fonts -->
-		<link rel="stylesheet" href="{% static 'isadmin/css/fonts.googleapis.com.css' %}" />
+		<link rel="stylesheet" href="assets/css/fonts.googleapis.com.css" />
 
 		<!-- ace styles -->
-		<link rel="stylesheet" href="{% static 'isadmin/css/ace.min.css' %}" class="ace-main-stylesheet" id="main-ace-style" />
+		<link rel="stylesheet" href="assets/css/ace.min.css" class="ace-main-stylesheet" id="main-ace-style" />
 
 		<!--[if lte IE 9]>
-			<link rel="stylesheet" href="{% static 'isadmin/css/ace-part2.min.css' %}" class="ace-main-stylesheet" />
+			<link rel="stylesheet" href="assets/css/ace-part2.min.css" class="ace-main-stylesheet" />
 		<![endif]-->
-		<link rel="stylesheet" href="{% static 'isadmin/css/ace-skins.min.css' %}" />
-		<link rel="stylesheet" href="{% static 'isadmin/css/ace-rtl.min.css' %}" />
+		<link rel="stylesheet" href="assets/css/ace-skins.min.css" />
+		<link rel="stylesheet" href="assets/css/ace-rtl.min.css" />
 
 		<!--[if lte IE 9]>
-		  <link rel="stylesheet" href="{% static 'isadmin/css/ace-ie.min.css' %}" />
+		  <link rel="stylesheet" href="assets/css/ace-ie.min.css" />
 		<![endif]-->
 
 		<!-- inline styles related to this page -->
 
 		<!-- ace settings handler -->
-		<script src="{% static 'isadmin/js/ace-extra.min.js' %}"></script>
+		<script src="assets/js/ace-extra.min.js"></script>
 
 		<!-- HTML5shiv and Respond.js for IE8 to support HTML5 elements and media queries -->
 
 		<!--[if lte IE 8]>
-		<script src="{% static 'isadmin/js/html5shiv.min.js' %}"></script>
-		<script src="{% static 'isadmin/js/respond.min.js' %}"></script>
+		<script src="assets/js/html5shiv.min.js"></script>
+		<script src="assets/js/respond.min.js"></script>
 		<![endif]-->
 	</head>
 
 	<body class="no-skin">
-        <div class="main-content">
+		<div class="main-container ace-save-state" id="main-container">
+			<div class="main-content">
 				<div class="main-content-inner">
 					<div class="breadcrumbs ace-save-state" id="breadcrumbs">
 						<ul class="breadcrumb">
@@ -60,7 +57,7 @@
 							<li>
 								<a href="#">Other Pages</a>
 							</li>
-							<li class="active">Error 404</li>
+							<li class="active">Error 500</li>
 						</ul><!-- /.breadcrumb -->
 
 						<div class="nav-search" id="nav-search">
@@ -82,42 +79,33 @@
 									<div class="well">
 										<h1 class="grey lighter smaller">
 											<span class="blue bigger-125">
-												<i class="ace-icon fa fa-sitemap"></i>
-												404
+												<i class="ace-icon fa fa-random"></i>
+												500
 											</span>
-											Page Not Found
+											服务器出错
 										</h1>
 
 										<hr />
-										<h3 class="lighter smaller">We looked everywhere but we couldn't find it!</h3>
+										<h3 class="lighter smaller">
+											但我们正在努力
+											<i class="ace-icon fa fa-wrench icon-animated-wrench bigger-125"></i>
+											修复!
+										</h3>
+
+										<div class="space"></div>
 
 										<div>
-											<form class="form-search">
-												<span class="input-icon align-middle">
-													<i class="ace-icon fa fa-search"></i>
-
-													<input type="text" class="search-query" placeholder="Give it a search..." />
-												</span>
-												<button class="btn btn-sm" type="button">Go!</button>
-											</form>
-
-											<div class="space"></div>
-											<h4 class="smaller">Try one of the following:</h4>
+											<h4 class="lighter smaller">同时，请尝试以下办法:</h4>
 
 											<ul class="list-unstyled spaced inline bigger-110 margin-15">
 												<li>
 													<i class="ace-icon fa fa-hand-o-right blue"></i>
-													Re-check the url for typos
+													阅读FAQ
 												</li>
 
 												<li>
 													<i class="ace-icon fa fa-hand-o-right blue"></i>
-													Read the faq
-												</li>
-
-												<li>
-													<i class="ace-icon fa fa-hand-o-right blue"></i>
-													Tell us about it
+													联系管理员描述更多出现此错误时的细节!
 												</li>
 											</ul>
 										</div>
@@ -128,12 +116,12 @@
 										<div class="center">
 											<a href="javascript:history.back()" class="btn btn-grey">
 												<i class="ace-icon fa fa-arrow-left"></i>
-												Go Back
+                                                返回
 											</a>
 
-											<a href="#" class="btn btn-primary">
+											<a href="/isadmin/" class="btn btn-primary">
 												<i class="ace-icon fa fa-tachometer"></i>
-												Dashboard
+												VPS监控
 											</a>
 										</div>
 									</div>
@@ -145,6 +133,7 @@
 					</div><!-- /.page-content -->
 				</div>
 			</div><!-- /.main-content -->
+		</div><!-- /.main-container -->
 
 		<!-- basic scripts -->
 
