--- a/mysite/isadmin/templates/isadmin/report/compare_unique.html
+++ b/mysite/isadmin/templates/isadmin/report/compare_unique.html
@@ -127,7 +127,7 @@
         <script src="{% static 'isadmin/js/dataTables.select.min.js' %}"></script>
 
 		<!--[if lte IE 8]>
-		  <script src="assets/js/excanvas.min.js"></script>
+		  <script src="{% static 'isadmin/js/excanvas.min.js' %}"></script>
 		<![endif]-->
         <script src="{% static 'isadmin/js/jquery-ui.custom.min.js' %}"></script>
         <script src="{% static 'isadmin/js/jquery.ui.touch-punch.min.js' %}"></script>
@@ -145,17 +145,65 @@
 		<script type="text/javascript">
 			jQuery(function($) {
 				//initiate dataTables plugin
-				var myTable = $('#dynamic-table').DataTable( {
+				var myTable = $('#dynamic-table').DataTable({
                     "serverSide": true,
-                    "ajax": "/isadmin/pubsocs_jqgrid",
-					"columns": [
-                        {"data": "id"},
-                        {"data": "request_url"},
-                        {"data": "send_ip"},
-                        {"data": "out_chain"},
-                        {"data": "task_id"}
-                    ]
-			    } );
+                    "ajax": "/isadmin/compare_unique_datas",
+                    "autoWidth": false,
+                    "scrollX":"100%",
+                    "columns": [
+                        {"data": "id", "title": "ID"},
+                        {"data": "request_url", "title": "原始请求"},
+                        {"data": "out_chain", "title": "独有外链"},
+                        {"data": "task_id", "title": "任务ID"},
+                        {"data": "send_ip", "title": "发送IP"},
+                        //{"data": "server_ip", "title": "服务IP"},
+                        {"data": "get_time", "title": "获取时间"}
+                    ],
+                    "columnDefs": [
+                        {
+                            "targets": 0,
+                            "render": function(data, type, row, meta) {
+                                return "<a href='/isadmin/show_snapshot/" + data + "' target='_blank'>" + data + "</a>";
+                            }
+                        },
+                        {
+                            "targets": [1, 2],
+                            "render": function(data, type, row, meta) {
+                                var show_data = "";
+                                if(data.length > 30) {
+                                    show_data = data.substring(0, 30) + "...";
+                                } else {
+                                    show_data = data;
+                                }
+                                return "<a href='" + data + "' target='_blank'>" + show_data + "</a>";
+                            }
+                        }
+                    ],
+                    "language": {
+                        "sProcessing": "处理中...",
+                        "sLengthMenu": "显示 _MENU_ 项结果",
+                        "sZeroRecords": "没有匹配结果",
+                        "sInfo": "显示第 _START_ 至 _END_ 项结果，共 _TOTAL_ 项",
+                        "sInfoEmpty": "显示第 0 至 0 项结果，共 0 项",
+                        "sInfoFiltered": "(由 _MAX_ 项结果过滤)",
+                        "sInfoPostFix": "",
+                        "sSearch": "搜索:",
+                        "sUrl": "",
+                        "sEmptyTable": "表中数据为空",
+                        "sLoadingRecords": "载入中...",
+                        "sInfoThousands": ",",
+                        "oPaginate": {
+                            "sFirst": "首页",
+                            "sPrevious": "上页",
+                            "sNext": "下页",
+                            "sLast": "末页"
+                        },
+                        "oAria": {
+                            "sSortAscending": ": 以升序排列此列",
+                            "sSortDescending": ": 以降序排列此列"
+                        }
+                    }
+                });
 
 				$.fn.dataTable.Buttons.defaults.dom.container.className = 'dt-buttons btn-overlap btn-group btn-overlap';
 
@@ -227,66 +275,6 @@
 						else $(this).tooltip({container: 'body', title: $(this).text()});
 					});
 				}, 500);
-
-				myTable.on( 'select', function ( e, dt, type, index ) {
-					if ( type === 'row' ) {
-						$( myTable.row( index ).node() ).find('input:checkbox').prop('checked', true);
-					}
-				} );
-				myTable.on( 'deselect', function ( e, dt, type, index ) {
-					if ( type === 'row' ) {
-						$( myTable.row( index ).node() ).find('input:checkbox').prop('checked', false);
-					}
-				} );
-
-				/////////////////////////////////
-				//table checkboxes
-				$('th input[type=checkbox], td input[type=checkbox]').prop('checked', false);
-
-				//select/deselect all rows according to table header checkbox
-				$('#dynamic-table > thead > tr > th input[type=checkbox], #dynamic-table_wrapper input[type=checkbox]').eq(0).on('click', function(){
-					var th_checked = this.checked;//checkbox inside "TH" table header
-
-					$('#dynamic-table').find('tbody > tr').each(function(){
-						var row = this;
-						if(th_checked) myTable.row(row).select();
-						else  myTable.row(row).deselect();
-					});
-				});
-
-				//select/deselect a row when the checkbox is checked/unchecked
-				$('#dynamic-table').on('click', 'td input[type=checkbox]' , function(){
-					var row = $(this).closest('tr').get(0);
-					if(this.checked) myTable.row(row).deselect();
-					else myTable.row(row).select();
-				});
-
-				$(document).on('click', '#dynamic-table .dropdown-toggle', function(e) {
-					e.stopImmediatePropagation();
-					e.stopPropagation();
-					e.preventDefault();
-				});
-
-				//And for the first simple table, which doesn't have TableTools or dataTables
-				//select/deselect all rows according to table header checkbox
-				var active_class = 'active';
-				$('#simple-table > thead > tr > th input[type=checkbox]').eq(0).on('click', function(){
-					var th_checked = this.checked;//checkbox inside "TH" table header
-
-					$(this).closest('table').find('tbody > tr').each(function(){
-						var row = this;
-						if(th_checked) $(row).addClass(active_class).find('input[type=checkbox]').eq(0).prop('checked', true);
-						else $(row).removeClass(active_class).find('input[type=checkbox]').eq(0).prop('checked', false);
-					});
-				});
-
-				//select/deselect a row when the checkbox is checked/unchecked
-				$('#simple-table').on('click', 'td input[type=checkbox]' , function(){
-					var $row = $(this).closest('tr');
-					if($row.is('.detail-row ')) return;
-					if(this.checked) $row.addClass(active_class);
-					else $row.removeClass(active_class);
-				});
 			})
 		</script>
 	</body>
