--- a/mysite/isadmin/templates/isadmin/report/redirect_records.html
+++ b/mysite/isadmin/templates/isadmin/report/redirect_records.html
@@ -168,7 +168,13 @@
                         {
                             "targets": [1, 2],
                             "render": function(data, type, row, meta) {
-                                return "<a href='" + data + "' target='_blank'>" + data + "</a>";
+                                var show_data = "";
+                                if(data.length > 30) {
+                                    show_data = data.substring(0, 30) + "...";
+                                } else {
+                                    show_data = data;
+                                }
+                                return "<a href='" + data + "' target='_blank'>" + show_data + "</a>";
                             }
                         }
                     ],
