增加前台重启定时器功能，以及修复因前几天修改数据库字段引发的bug

--- a/mysite/isadmin/templates/isadmin/index.html
+++ b/mysite/isadmin/templates/isadmin/index.html
@@ -431,6 +431,15 @@
                         </ul>
                     </li>
 
+                    <li class="sidebar-item">
+                        <a href="/isadmin/one_button" target="main-iframe">
+							<i class="menu-icon fa  fa-bolt"></i>
+							<span class="menu-text"> 一键功能 </span>
+						</a>
+
+                        <b class="arrow"></b>
+                    </li>
+
                     <li class="sidebar-item has-son">
                         <a href="#" class="dropdown-toggle">
                             <i class="menu-icon fa fa-pencil-square-o"></i>
