前端和闭环

--- a/mysite/isadmin/templates/isadmin/index.html
+++ b/mysite/isadmin/templates/isadmin/index.html
@@ -443,6 +443,41 @@
                     <li class="sidebar-item has-son">
                         <a href="#" class="dropdown-toggle">
                             <i class="menu-icon fa fa-pencil-square-o"></i>
+                            <span class="menu-text"> 数据报表 </span>
+
+                            <b class="arrow fa fa-angle-down"></b>
+                        </a>
+
+                        <b class="arrow"></b>
+
+                        <ul class="submenu">
+                            <li class="sidebar-item">
+                                <a href="/isadmin/report/redirect_records" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    重定向页面记录
+                                </a>
+                                <b class="arrow"></b>
+                            </li>
+                            <li class="sidebar-item">
+                                <a href="/isadmin/report/filted_suspicious" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    可疑外链过滤结果
+                                </a>
+                                <b class="arrow"></b>
+                            </li>
+                            <li class="sidebar-item">
+                                <a href="/isadmin/report/compare_unique" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    多地快照比对结果
+                                </a>
+                                <b class="arrow"></b>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="sidebar-item has-son">
+                        <a href="#" class="dropdown-toggle">
+                            <i class="menu-icon fa fa-pencil-square-o"></i>
                             <span class="menu-text"> 数据库管理 </span>
 
                             <b class="arrow fa fa-angle-down"></b>
@@ -486,43 +521,18 @@
 
                                 <b class="arrow"></b>
                             </li>
-                        </ul>
-                    </li>
 
-                    <li class="sidebar-item has-son">
-                        <a href="#" class="dropdown-toggle">
-                            <i class="menu-icon fa fa-pencil-square-o"></i>
-                            <span class="menu-text"> 数据报表 </span>
-
-                            <b class="arrow fa fa-angle-down"></b>
-                        </a>
-
-                        <b class="arrow"></b>
-
-                        <ul class="submenu">
                             <li class="sidebar-item">
-                                <a href="/isadmin/report/redirect_records" target="main-iframe">
+                                <a href="/isadmin/pocr_list" target="main-iframe">
                                     <i class="menu-icon fa fa-caret-right"></i>
-                                    重定向页面记录
+                                    比对结果表
                                 </a>
-                                <b class="arrow"></b>
-                            </li>
-                            <li class="sidebar-item">
-                                <a href="/isadmin/report/filted_suspicious" target="main-iframe">
-                                    <i class="menu-icon fa fa-caret-right"></i>
-                                    可疑外链过滤结果
-                                </a>
-                                <b class="arrow"></b>
-                            </li>
-                            <li class="sidebar-item">
-                                <a href="/isadmin/report/compare_unique" target="main-iframe">
-                                    <i class="menu-icon fa fa-caret-right"></i>
-                                    多地快照比对结果
-                                </a>
+
                                 <b class="arrow"></b>
                             </li>
                         </ul>
                     </li>
+
                 </ul><!-- /.nav-list -->
 
                 <div class="sidebar-toggle sidebar-collapse" id="sidebar-collapse">
