--- a/mysite/isadmin/templates/isadmin/report/filted_suspicious.html
+++ b/mysite/isadmin/templates/isadmin/report/filted_suspicious.html
@@ -73,13 +73,22 @@
 
 					<div class="page-content">
 						<div class="page-header">
-							<h1>
-								可疑外链过滤结果
-								<small>
-									<i class="ace-icon fa fa-angle-double-right"></i>
-									可疑外链即出现在现有网站链接白名单之外的外链。
-								</small>
-							</h1>
+                            <div class="row">
+                                <div class="col-xs-9">
+                                    <h1>
+								        可疑外链过滤结果
+								        <small>
+									        <i class="ace-icon fa fa-angle-double-right"></i>
+									        可疑外链即出现在现有网站链接白名单之外的外链。
+								        </small>
+							        </h1>
+                                </div>
+                                <div class="col-xs-3">
+                                    <div class="clearfix">
+											<div class="pull-right tableTools-container"></div>
+										</div>
+                                </div>
+                            </div>
 						</div><!-- /.page-header -->
 
 						<div class="row">
@@ -87,9 +96,6 @@
 								<!-- PAGE CONTENT BEGINS -->
                                 <div class="row">
 									<div class="col-xs-12">
-										<div class="clearfix">
-											<div class="pull-right tableTools-container"></div>
-										</div>
 										<div>
 											<table id="dynamic-table" class="table table-striped table-bordered table-hover"></table>
 										</div>
@@ -152,22 +158,28 @@
                     "scrollX":"100%",
                     "columns": [
                         {"data": "id", "title": "ID"},
+                        {"data": "ss_id", "title": "快照"},
                         {"data": "request_url", "title": "原始请求"},
                         {"data": "unknown_domain", "title": "可疑域名"},
-                        {"data": "task_id", "title": "任务ID"},
-                        {"data": "send_ip", "title": "发送IP"},
-                        {"data": "server_ip", "title": "服务IP"},
-                        {"data": "get_time", "title": "获取时间"}
+                        {"data": "send_ip", "title": "发送IP", "width": "117px"},
+                        {"data": "server_ip", "title": "服务IP", "width": "117px"},
+                        {"data": "get_time", "title": "获取时间", "width": "150px"},
+                        {"data": "checked", "title": "检查状态"},
+                        {"data": "result", "title": "检查结果"}
                     ],
                     "columnDefs": [
                         {
                             "targets": 0,
+                            "visible": false
+                        },
+                        {
+                            "targets": 1,
                             "render": function(data, type, row, meta) {
                                 return "<a href='/isadmin/show_snapshot/" + data + "?aim=" + row.unknown_domain + "#aim_point' target='_blank'>" + data + "</a>";
                             }
                         },
                         {
-                            "targets": 1,
+                            "targets": [2, 3],
                             "render": function(data, type, row, meta) {
                                 var show_data = "";
                                 if(data.length > 30) {
@@ -175,7 +187,29 @@
                                 } else {
                                     show_data = data;
                                 }
-                                return "<a href='" + data + "' target='_blank'>" + show_data + "</a>";
+                                return "<a href='http://" + data + "' target='_blank'>" + show_data + "</a>";
+                            }
+                        },
+                        {
+                            "targets": 7,
+                            "render": function (data, type, row, meta) {
+                                if(data == "1") {
+                                    return '<button class="btn btn-minier btn-success"><i class="ace-icon glyphicon glyphicon-ok"></i>已检查</button>';
+                                }
+                                var element_str = '<div class="btn-group""><button data-toggle="dropdown" class="btn btn-info btn-xs dropdown-toggle" aria-expanded="true"> 性质判定 <span class="ace-icon fa fa-caret-down icon-on-right"></span></button><ul class="dropdown-menu dropdown-info dropdown-menu-right"><li><a href="#">恶意链接</a></li><li><a href="#">加入公共白名单</a></li><li><a href="#">加入私有白名单</a></li></ul></div>';
+                                return element_str;
+                            }
+                        },
+                        {
+                            "targets": 8,
+                            "render": function (data, type, row, meta) {
+                                if(data == "1") {
+                                    return '<span class="label label-danger arrowed"><i class="ace-icon glyphicon glyphicon-tag"></i> 恶意</span>';
+                                } else if(data == "0") {
+                                    return '<span class="label label-success arrowed"><i class="ace-icon glyphicon glyphicon-tag"></i> 误判</span>';
+                                } else {
+                                    return '<span class="label label-warning arrowed"><i class="ace-icon glyphicon glyphicon-tag"></i> 未检查</span>';
+                                }
                             }
                         }
                     ],
